@@ -1,3 +1,8 @@
+Thu Aug  6 01:28:53 2009  Tanaka Akira  <akr@fsij.org>
+
+	* eval.c (rb_thread_schedule): fix condition for making thread
+	  runnable.  [ruby-core:23515]
+
 Wed Aug  5 12:54:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* eval.c (rb_exc_raise, rb_exc_fatal): require exception object.
